--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,6 @@ header nav {
   grid-column: 35% 15% 15% 15% auto;
   grid-rows: 20px auto;
   padding: 20px;
-  margin-bottom: 65px;
   grid-gap: 10px;
   background-color: rgb(42, 42, 42);
   color: rgb(223, 223, 223);
@@ -112,13 +111,20 @@ header nav {
   height:40px;
 }
 
+// BODY
+
+main{
+  padding-top: 30px;
+  padding-bottom: 100px;
+  background-color: rgb(252, 249, 244);
+}
+
 // FOOTER
 
 footer{
   display: flex;
   width: 100%;
   padding: 20px;
-  margin-top: 100px;
   justify-content: center;
   align-items: center;
   background-color: rgb(38, 38, 38);
