--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -5,6 +5,8 @@
 #home-container {
   margin: 0;
   padding: 5%;
+  margin-top: 50px;
+  background-color: rgb(226, 224, 218);
 }
 
 .flex-container {
@@ -26,11 +28,10 @@
 }
 
 .title-page {
-  padding: 5px;
-  color: rgb(128,128,128);
+  padding-bottom: 100px;
+  color: rgb(61, 61, 61);
   text-align: center;
-  text-decoration: underline;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 .product-info {
@@ -54,15 +55,20 @@
 }
 
 .pagination {
-  .previous_page { background:#ffffff; color:white; border: 2px solid #35324D; padding: .5em; font-size: .8em; color: #35324d; }
-  .previous_page.disabled { background: white; color: #dedede; border: 2px solid #dedede }
-  .current { background: #FF9F05; color: #ffffff ; border: .4em solid #FF9F05;}
-  .next_page { background:#ffffff; color:white; border: 2px solid #35324D; padding: .5em; font-size: .8em; color: #35324d; }
-  .next_page.disabled { background: white; color: #dedede; border: 2px solid #dedede }
-  padding-right: 3em;
+  .previous_page { background:#ffffff; color:white; padding: .5em; font-size: .8em; color: #35324d;}
+  .previous_page.disabled { background: white; color: #dedede; border: 2px solid #dedede;}
+  .current { background: #30CFD0; color: #ffffff; border: .4em solid #30CFD0;}
+  .next_page { background:#ffffff; color:white; padding: .5em; font-size: .8em; color: #35324d;}
+  .next_page.disabled { background: white; color: #dedede; border: 2px solid #dedede;}
+  padding-top: 20px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
+}
+
+.pagination > *{
+  margin-left: 10px;
+  margin-right: 10px;
 
 }
 
