--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -49,6 +49,6 @@
 </div>
 </div>
 
-<button type="submit" class="btn btn-primary">Continue</button>
+<button type="submit" class="btn btn-info">Continue</button>
 <% end %>
 </form>
