--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -38,6 +38,6 @@
   <%= f.label :product_review %>
   <%= f.text_area :description, :rows => 10, style: 'width:100%;' %>
 
-  <%= f.submit "submit", class: "btn btn-primary" %>
+  <%= f.submit "Submit", class: "btn btn-info" %>
   <% end %>
 </div>
