--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -69,7 +69,7 @@
 
         </tbody>
       </table>
-      <button type="button" class="btn btn-success btn-lg btn-block"><%= link_to 'Return Home', root_path, :class => "btn"%><span class="glyphicon glyphicon-chevron-right"></span>
+      <button type="button" class="btn btn-info btn-lg btn-block"><%= link_to 'Return Home', root_path, :class => "btn"%><span class="glyphicon glyphicon-chevron-right"></span>
       </button>
     </div>
   </div>
